Updated Github Links

--- a/html/options.html
+++ b/html/options.html
@@ -36,17 +36,16 @@
 						<li>
 							<a href="mailto:suryasongs@gmail.com" id="email">Send an email</a>
 							<div class="clear"></div>
-							<a href="#" id="github">File a bug</a></li>
+							<a href="https://github.com/suryatech/Quora-Save-To-Pocket/issues" id="github">File a bug</a></li>
 					</ul>
 					<div class="clear"></div><br>
 				</div>
 
 				<div class="section-wrapper" >
-					<h3>Share</h3>
+					<h3>Share/Support</h3>
 					<ul class="section-item-list">
 						<li>
-							<a href="https://www.twitter.com" target="_blank" id="fb">Twitter</a>,
-							<a href="https://www.facebook.com" target="_blank" id="twitter">Facebook</a>
+							<a target="_blank" href="https://github.com/suryatech/Quora-Save-To-Pocket">Github</a>
 						</li>
 					</ul>
 					<div class="clear"></div>
