--- a/html/options.html
+++ b/html/options.html
@@ -3,10 +3,10 @@
 		<title></title>
 		<link rel="stylesheet" type="text/css" href="../css/reset.css">
 		<link rel="stylesheet" type="text/css" href="../css/options.css">
-		<script src="../js/jquery/jquery.min.js" type="text/javascript" charset="utf-8"></script>
-		<script src="../js/jquery.noty.packaged.min.js" type="text/javascript" charset="utf-8"></script>
-		<script src="../js/options.js" type="text/javascript" charset="utf-8"></script>
-
+		<script src="../js/jquery/jquery.min.js"></script>
+		<script src="../js/jquery.noty.packaged.min.js"></script>
+		<script src="../js/relax.js"></script>
+		<script src="../js/options.js"></script>
 	</head>
 	<body>
 		<div id="content">
