--- a/html/options.html
+++ b/html/options.html
@@ -36,7 +36,7 @@
 						<li>
 							<a href="mailto:suryasongs@gmail.com" id="email">Send an email</a>
 							<div class="clear"></div>
-							<a href="https://github.com/suryatech/Quora-Save-To-Pocket/issues" id="github">File a bug</a></li>
+							<a target="_blank" href="https://github.com/suryatech/Quora-Save-To-Pocket/issues" id="github">File a bug</a></li>
 					</ul>
 					<div class="clear"></div><br>
 				</div>
